objects/LLC_BI__Policy_Type__c.object
<CustomObject>
    <description>This object stores policy types used with Policy Management. The policy type determines the available dimensions and the routing dimension.</description>
    <fields>
        <fullName>LLC_BI__Context_Object__c</fullName>
        <description>Administrators populate this required text field with the context object for all policies of this type. By default, the value is blank.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter the context object.</inlineHelpText>
        <label>Context Object</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Policy_Type_Feature__c</fullName>
        <description>Administrators populate this optional multi-select picklist field with the name of the feature(s) associated to the policy type. By default, it is blank.</description>
        <inlineHelpText>Select the name of the feature(s) associated to the policy type.</inlineHelpText>
        <label>Policy Type Feature</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fee Management</fullName>
                </value>
                <value>
                    <fullName>Indirect Automotive Lending</fullName>
                </value>
                <value>
                    <fullName>Collateral Advance Rate</fullName>
                </value>
                <value>
                    <fullName>Offers Auto-Applied Fees</fullName>
                </value>
                <value>
                    <fullName>Retail Pricing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Routing_Dimension__c</fullName>
        <description>Administrators populate this required picklist field to specify a routing dimension for all policies of this type. By default, the value is blank.</description>
        <inlineHelpText>Select the routing dimension.</inlineHelpText>
        <label>Routing Dimension</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Product Type</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Workflow_Object__c</fullName>
        <description>Administrators populate this optional text field with the lookup field API name that defines the path from the policy type&apos;s context object to the object on which the workflow is initiated. By default, it is blank.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter the lookup field API name that defines the path from the policy type&apos;s context object to the object on which the workflow is initiated. If the lookup field API name is the same as the context object, leave this field blank.</inlineHelpText>
        <label>Workflow Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__lookupKey__c</fullName>
        <description>The field is optional. If populated the value must be unique across all the records of this type. The field typically contains an external identifier that is used to associate the record with its matching record in an external system. The field can also be used to efficiently associate related records, when importing data into nCino, without the need to know the internal ID for the record. For more information, refer to https://developer.salesforce.com/docs/atlas.en-us.apexcode.meta/apexcode/langCon_apex_dml_nested_object.htm.</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>lookupKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Policy Type</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Policy Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Policy Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>